Added Google Analytics

--- a/contact.html
+++ b/contact.html
@@ -21,40 +21,6 @@
 
 <body class="all-content">
 <header>
-    <!--<ul class="header-inner">-->
-
-        <!--<li class="logo hidden-xs">-->
-            <!--<a href="index.html">OAU FaceWars</a>-->
-        <!--</li>-->
-
-        <!--<li class="pull-right">-->
-            <!--<ul class="top-menu">-->
-                <!--<li class="dropdown">-->
-                    <!--<a data-toggle="dropdown" class="tm-settings" href=""></a>-->
-                    <!--<ul class="dropdown-menu dm-icon pull-right">-->
-                        <!--<li>-->
-                            <!--<a href="./signin.html"><i class="zmdi zmdi-face"></i> Sign-In</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="./leaderboard.html"><i class="zmdi zmdi-settings"></i> Leaderboard</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="./contact.html"><i class="zmdi zmdi-settings"></i> Contact</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="verify.html"><i class="zmdi zmdi-settings"></i> Verify</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="./shuffle.html"><i class="zmdi zmdi-settings"></i> Shuffle</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="./download.html"><i class="zmdi zmdi-settings"></i> Download</a>-->
-                        <!--</li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</li>-->
-    <!--</ul>-->
 
     <nav id="latest-header" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -93,100 +59,6 @@
 <section id="content">
 
 <div class="container">
-
-<!--<div class="block-header">-->
-<!--<h2>Contacts<small>Manage your contact information</small></h2>-->
-<!---->
-<!--<ul class="actions m-t-20 hidden-xs">-->
-<!--<li class="dropdown">-->
-<!--<a href="" data-toggle="dropdown">-->
-<!--<i class="zmdi zmdi-more-vert"></i>-->
-<!--</a>-->
-<!---->
-<!--<ul class="dropdown-menu dropdown-menu-right">-->
-<!--<li>-->
-<!--<a href="">Privacy Settings</a>-->
-<!--</li>-->
-<!--<li>-->
-<!--<a href="">Account Settings</a>-->
-<!--</li>-->
-<!--<li>-->
-<!--<a href="">Other Settings</a>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</div>-->
-
-<!-- Add button -->
-<!--<button class="btn btn-float btn-danger m-btn"><i class="zmdi zmdi-plus"></i></button>-->
-
-
-<!--<div class="card">-->
-<!--<div class="lv-header-alt clearfix m-b-5">-->
-
-
-
-    <!--<h2 class="lvh-label hidden-xs">Contact Us</h2>-->
-
-    <!--<div class="lvh-search">-->
-        <!--<input type="text" placeholder="Start typing..." class="lvhs-input">-->
-
-        <!--<i class="lvh-search-close">&times;</i>-->
-    <!--</div>-->
-
-    <!--<ul class="lv-actions actions">-->
-        <!--<li>-->
-            <!--<a href="" class="lvh-search-trigger">-->
-                <!--<i class="zmdi zmdi-search"></i>-->
-            <!--</a>-->
-        <!--</li>-->
-        <!--<li>-->
-            <!--<a href="">-->
-                <!--<i class="zmdi zmdi-time"></i>-->
-            <!--</a>-->
-        <!--</li>-->
-        <!--<li class="dropdown">-->
-            <!--<a href="" data-toggle="dropdown"="" aria-expanded="false" aria-haspopup="true">-->
-            <!--<i class="zmdi zmdi-sort"></i>-->
-            <!--</a>-->
-
-            <!--<ul class="dropdown-menu dropdown-menu-right">-->
-                <!--<li>-->
-                    <!--<a href="">Last Modified</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="">Last Edited</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="">Name</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="">Date</a>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</li>-->
-        <!--<li>-->
-            <!--<a href="">-->
-                <!--<i class="zmdi zmdi-info"></i>-->
-            <!--</a>-->
-        <!--</li>-->
-        <!--<li class="dropdown">-->
-            <!--<a href="" data-toggle="dropdown"="" aria-expanded="false" aria-haspopup="true">-->
-            <!--<i class="zmdi zmdi-more-vert"></i>-->
-            <!--</a>-->
-
-            <!--<ul class="dropdown-menu dropdown-menu-right">-->
-                <!--<li>-->
-                    <!--<a href="">Refresh</a>-->
-                <!--</li>-->
-                <!--<li>-->
-                    <!--<a href="">Settings</a>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</li>-->
-    <!--</ul>-->
-<!--</div>-->
 
 
 <div class="card-body card-padding">
@@ -305,6 +177,15 @@
 <script src="js/constants.js"></script>
 <script src="js/demo.js"></script>
 
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-70475918-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
 </body>
 </html>
