--- a/signin.html
+++ b/signin.html
@@ -252,21 +252,30 @@
                 $(location).attr('href', BASE_URL)
 //                alert(token);
             }
-        console.log("Output;");
-        console.log('location.hostname : '+location.hostname);
-        console.log('document.domain : '+document.domain);
-        console.log('window.location.hostname : '+window.location.hostname)
-
-        console.log("document.URL : "+document.URL);
-        console.log("document.location.href : "+document.location.href);
-        console.log("document.location.origin : "+document.location.origin);
-        console.log("document.location.hostname : "+document.location.hostname);
-        console.log("document.location.host : "+document.location.host);
-        console.log("document.location.pathname : "+document.location.pathname);
+//        console.log("Output;");
+//        console.log('location.hostname : '+location.hostname);
+//        console.log('document.domain : '+document.domain);
+//        console.log('window.location.hostname : '+window.location.hostname)
+//
+//        console.log("document.URL : "+document.URL);
+//        console.log("document.location.href : "+document.location.href);
+//        console.log("document.location.origin : "+document.location.origin);
+//        console.log("document.location.hostname : "+document.location.hostname);
+//        console.log("document.location.host : "+document.location.host);
+//        console.log("document.location.pathname : "+document.location.pathname);
     });
 
 </script>
 
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-70475918-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
 </body>
 </html>
