--- a/download.html
+++ b/download.html
@@ -51,40 +51,6 @@
         <!-- /.container -->
     </nav>
 
-    <!--<ul class="header-inner">-->
-
-        <!--<li class="logo hidden-xs">-->
-            <!--<a href="index.html">OAU FaceWars</a>-->
-        <!--</li>-->
-
-        <!--<li class="pull-right">-->
-            <!--<ul class="top-menu">-->
-                <!--<li class="dropdown">-->
-                    <!--<a data-toggle="dropdown" class="tm-settings" href=""></a>-->
-                    <!--<ul class="dropdown-menu dm-icon pull-right">-->
-                        <!--<li>-->
-                            <!--<a href="./signin.html"><i class="zmdi zmdi-face"></i> Sign-In</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="./leaderboard.html"><i class="zmdi zmdi-settings"></i> Leaderboard</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="./contact.html"><i class="zmdi zmdi-settings"></i> Contact</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="verify.html"><i class="zmdi zmdi-settings"></i> Verify</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="./shuffle.html"><i class="zmdi zmdi-settings"></i> Shuffle</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="./download.html"><i class="zmdi zmdi-settings"></i> Download</a>-->
-                        <!--</li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</li>-->
-    <!--</ul>-->
 </header>
 
 <section id="main">
@@ -195,6 +161,15 @@
 <script src="js/constants.js"></script>
 <script src="js/demo.js"></script>
 
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-70475918-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
 </body>
 </html>
