Share on Social Media Plugins

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="vendors/bower_components/bootstrap-sweetalert/lib/sweet-alert.css" rel="stylesheet">
         <link href="vendors/bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css" rel="stylesheet">
         <link href="vendors/bower_components/lightgallery/light-gallery/css/lightGallery.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/rrssb.css" />
             
         <!-- CSS -->
         <link href="css/app.min.1.css" rel="stylesheet">
@@ -66,6 +67,24 @@
                             <h2 id="today-date" class="lvh-label hidden-xs"></h2>
 
                             <ul class="lv-actions actions">
+                                    <li class="">
+                                        <!--  Replace with your URL. For best results, make sure you page has the proper FB Open Graph tags in header: https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/ -->
+                                        <a href="https://www.facebook.com/sharer/sharer.php?u=http://oau-facewars.rhcloud.com" class="popup">
+                                            <i class="zmdi zmdi-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li class="">
+                                        <!-- Replace href with your Meta and URL information  -->
+                                        <a href="https://twitter.com/intent/tweet?text=Check%20out%20today%27s%20competitors%20on%20OAU%20Facewars%3A%20http%3A%2F%2Foau-facewars.rhcloud.com" class="popup">
+                                            <i class="zmdi zmdi-twitter"></i>
+                                        </a>
+                                    </li>
+                                    <li class="">
+                                        <a href="https://plus.google.com/share?url=Check%20out%20today%27s%20competitors%20on%20OAU%20Facewars%3A%20http%3A%2F%2Foau-facewars.rhcloud.com" class="popup">
+                                            <i class="zmdi zmdi-google-plus"></i>
+                                        </a>
+                                    </li>
+                                <!-- Buttons end here -->
                                 <li class="dropdown">
                                     <a href="" data-toggle="dropdown" aria-expanded="false" aria-haspopup="true">
                                         <i class="zmdi zmdi-more-vert"></i>
