--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li id="sign-in"><a href="./signin.html">Sign-In</a></li>
+                    <li id="sign-in"><a href="./signin">Sign-In</a></li>
                     <li id="sign-out"><a data-action="clear-localstorage" href="">Sign-Out</a></li>
-                    <li><a href="./leaderboard.html">Leaderboard</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
-                    <li><a href="./download.html">Download</a></li>
+                    <li><a href="./leaderboard">Leaderboard</a></li>
+                    <li><a href="./contact">Contact</a></li>
+                    <li><a href="./download">Download</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -108,9 +108,9 @@
 
     <ul class="f-menu">
         <li><a href="./">Home</a></li>
-        <li><a href="./leaderboard.html">Leaderboard</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-        <li><a href="./download.html">Download</a></li>
+        <li><a href="./leaderboard">Leaderboard</a></li>
+        <li><a href="./contact">Contact</a></li>
+        <li><a href="./download">Download</a></li>
     </ul>
 </footer>
 
