--- a/verify.html
+++ b/verify.html
@@ -38,10 +38,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="./signin.html">Sign-In</a></li>
-                    <li><a href="./leaderboard.html">Leaderboard</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
-                    <li><a href="./download.html">Download</a></li>
+                    <li><a href="./signin">Sign-In</a></li>
+                    <li><a href="./leaderboard">Leaderboard</a></li>
+                    <li><a href="./contact">Contact</a></li>
+                    <li><a href="./download">Download</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
