Added 'coming soon' to the download page and inserted into the whitelist table

--- a/download.html
+++ b/download.html
@@ -68,19 +68,19 @@
 
                     <div class="pti-body">
                         <div class="ptib-item">
-                            Nullam diam dolor, sollicitudin vitae magna ut, pharetra tempor velit. Donec quis egestas nisl, id porta mi. Phasellus eleifend facilisis
+                            Coming Soon!
                         </div>
-                        <div class="ptib-item">
-                            Ina enim liberosed whens
-                        </div>
-                        <div class="ptib-item">
-                            Sipsum maunich lendilwer
-                        </div>
+                        <!--<div class="ptib-item">-->
+                            <!--Ina enim liberosed whens-->
+                        <!--</div>-->
+                        <!--<div class="ptib-item">-->
+                            <!--Sipsum maunich lendilwer-->
+                        <!--</div>-->
                     </div>
 
-                    <div class="pti-footer">
-                        <a href="" class="bgm-green"><i class="zmdi zmdi-download"></i></a>
-                    </div>
+                    <!--<div class="pti-footer">-->
+                        <!--<a href="" class="bgm-green"><i class="zmdi zmdi-download"></i></a>-->
+                    <!--</div>-->
                 </div>
             </div>
         </div>
